--- a/LimenawebApp/Views/Home/Enroll.cshtml
+++ b/LimenawebApp/Views/Home/Enroll.cshtml
@@ -18,10 +18,10 @@
                     <h3>General</h3>
                     <input type="text" class="w-input" maxlength="256" name="CardName" placeholder="Empresa (*)" id="CardName" required="">
                     <input type="text" class="w-input" maxlength="256" name="Phone1" placeholder="Telefono (*)" id="Phone1" required="">
-                    <input type="email" class="w-input" maxlength="256" name="E_Mail" placeholder="Correo electrónico" id="E_Mail">
+                    <input type="email" class="w-input" maxlength="256" name="E_Mail" placeholder="Correo electrónico (*)" id="E_Mail" required>
                     <input type="text" class="w-input" maxlength="256" name="IntrntSite" placeholder="Sitio Web" id="IntrntSite">
                     <input type="text" class="w-input" maxlength="256" name="TAXID" placeholder="UNIFIED FEDERAL TAX ID (*)" id="TAXID" required="" autocomplete="off">
-                    <input type="text" class="w-input" maxlength="256" name="TAXCERTNUM" placeholder="RESALES TAX CERTIFICATE NUMBER (*)" id="TAXCERTNUM" required="" autocomplete="off">
+                    <input type="text" class="w-input" maxlength="256" name="TAXCERTNUM" placeholder="RESALES TAX CERTIFICATE NUMBER" id="TAXCERTNUM" autocomplete="off">
 
                     <h3>Datos de Contacto</h3>
                     <input type="text" class="w-input" maxlength="256" name="FirstName" placeholder="Nombre (*)" id="FirstName" required="">
@@ -31,23 +31,71 @@
                     <input type="email" class="w-input" maxlength="256" name="E_MailL" placeholder="Correo electrónico (*)" id="E_MailL" required="">
 
                     <h3>Dirección</h3>
-                    <select name="countryId" style="margin-bottom:10px !important" class="select-box countries order-alpha include-US" id="countryId" required>
+                    <select name="countryId" style="margin-bottom:10px !important" class="select-box" id="countryId" required>
                         <option value="">Seleccione País</option>
-                    </select>
-                    <select name="stateId" style="margin-bottom:10px !important" class="select-box states order-alpha" id="stateId" required>
-                        <option value="">Seleccione Estado</option>
-                    </select>
-                    <select name="cityId" style="margin-bottom:10px !important" class="select-box cities order-alpha" id="cityId" required>
-                        <option value="">Seleccione Ciudad</option>
+                        <option value="USA">United States</option>
                     </select>
 
-                    <input type="text" class="w-input" maxlength="256" name="Street" placeholder="Calle (*)" id="Street" required="">
                     <input type="text" class="w-input" maxlength="256" name="ZipCode" placeholder="ZIP CODE (*)" id="ZipCode" required="">
+                    <input name="cityId" class="w-input" id="cityId" placeholder="Ciudad (*)" required readonly>
+                    <input name="stateId" class="w-input" id="stateId" placeholder="Estado (*)" required readonly>
+
+
+                    @*<select name="stateId" style="margin-bottom:10px !important" class="select-box states order-alpha" id="stateId" required>
+            <option value="">Seleccione Estado</option>
+        </select>
+        <select name="cityId" style="margin-bottom:10px !important" class="select-box cities order-alpha" id="cityId" required>
+            <option value="">Seleccione Ciudad</option>
+        </select>*@
+
+                    <input type="text" class="w-input" maxlength="256" name="Street" placeholder="Calle (*)" id="Street" required="">
+
 
                 </div>
                 <div class="col-md-2"></div>
 
                 <div class="col-md-5">
+
+                    <h3>Otros</h3>
+                    <div >
+                        <label>Horario de Operacion</label>
+                        <input type="text" class="w-input" name="HorarioOperacion" id="HorarioOperacion" required="">
+                    </div>
+
+                    <select class="select-box" style="margin-bottom:10px !important" name="ReciboMercaderiaDia" id="ReciboMercaderiaDia" required multiple>
+
+                        <option value="Sunday">Sunday</option>
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday">Friday</option>
+                        <option value="Saturday">Saturday</option>
+                    </select>
+                    <br /><br />
+                    <input type="text" class="w-input" maxlength="256" name="ReciboMercaderiaArea" placeholder="Area de recibo de mercaderia (*)" id="ReciboMercaderiaArea" required="">
+                    <div class="form-group">
+                        <input type="checkbox" id="MuelleDescarga">
+                        <label for="MuelleDescarga">MUELLE DE DESCARGA</label>
+                    </div>
+                    <select class="select-box" style="margin-bottom:10px !important" name="TamanoTienda" id="TamanoTienda" required>
+                        <option value="">Tamano de la tienda (*)</option>
+                        @foreach (var item in ViewBag.tamanostienda)
+        {
+                <option value="@item.Descr">@item.Descr</option>
+
+}
+
+                        @*<option value="-3.000ft">- 3.000 ft</option>
+            <option value="+3.000ft">+ 3.000 ft</option>
+            <option value="+5.000ft">+ 5.000 ft</option>
+            <option value="+10.000ft">+ 10.000 ft</option>
+            <option value="+20.000ft">+ 20.000 ft</option>*@
+
+                    </select>
+
+
+
                     <h3>Características</h3>
                     <h4>Servicios</h4>
                     <div class="row">
@@ -111,7 +159,7 @@
                         </div>
                     </div>
 
-                 
+
                     <h4>Etnias</h4>
                     <div class="row">
                         <div class="col-md-6">
@@ -164,57 +212,32 @@
                                 <label for="e10">HONDURAS</label>
                             </div>
                         </div>
-       
 
-                    <h3>Imágenes adjutas</h3>
-                    <div class="col-12">
-                        <div>
-                            <label>TAX CERTIFICATE</label>
-                            <input type="file" class="fileTAX" id="TAXCERT" required>
+
+                        <h3>Imágenes adjutas</h3>
+                        <div class="col-12">
+                            <div>
+                                <label>TAX CERTIFICATE</label>
+                                <input type="file" class="fileTAX" id="TAXCERT" required>
+                            </div>
+                            <div>
+                                <label>RESALE TAX CERTIFICATE NUM</label>
+                                <input type="file" class="fileTAX" id="TAXRECERTNUM">
+                            </div>
                         </div>
-                        <div>
-                            <label>RESALE TAX CERTIFICATE NUM</label>
-                            <input type="file" class="fileTAX" id="TAXRECERTNUM" required>
-                        </div>
+
+                        <br /><br />
+                        @Html.Recaptcha(theme: Recaptcha.Web.RecaptchaTheme.Clean)
+
+                        <input type="submit" id="btnEnviar" value="Enviar" data-wait="Por favor espere..." class="formbutton w-button">
+
+
+
+
+
                     </div>
-
-                    <h3>Otros</h3>
-                    <input type="text" class="w-input" maxlength="256" name="HorarioOperacion" placeholder="Horario de operacion (*)" id="HorarioOperacion" required="">
-                    <select class="select-box" style="margin-bottom:10px !important" name="ReciboMercaderiaDia" id="ReciboMercaderiaDia" required>
-                        <option value="">Dia de recibo de mercaderia (*)</option>
-                        <option value="Domingo">Domingo</option>
-                        <option value="Lunes">Lunes</option>
-                        <option value="Martes">Martes</option>
-                        <option value="Miercoles">Miercoles</option>
-                        <option value="Jueves">Jueves</option>
-                        <option value="Viernes">Viernes</option>
-                        <option value="Sabado">Sabado</option>
-                    </select>
-                    <input type="text" class="w-input" maxlength="256" name="ReciboMercaderiaArea" placeholder="Area de recibo de mercaderia (*)" id="ReciboMercaderiaArea" required="">
-                    <div class="form-group">
-                        <input type="checkbox" id="MuelleDescarga">
-                        <label for="MuelleDescarga">MUELLE DE DESCARGA</label>
-                    </div>
-                    <select class="select-box" style="margin-bottom:10px !important" name="TamanoTienda" id="TamanoTienda" required>
-                        <option value="">Tamano de la tienda (*)</option>
-                        <option value="-3.000ft">- 3.000 ft</option>
-                        <option value="+3.000ft">+ 3.000 ft</option>
-                        <option value="+5.000ft">+ 5.000 ft</option>
-                        <option value="+10.000ft">+ 10.000 ft</option>
-                        <option value="+20.000ft">+ 20.000 ft</option>
-
-                    </select>
-
-                    @Html.Recaptcha(theme: Recaptcha.Web.RecaptchaTheme.Clean)
-
-                    <input type="submit" id="btnEnviar" value="Enviar" data-wait="Por favor espere..." class="formbutton w-button">
-             
-
-
-
 
                 </div>
-
             </div>
             </form>
             @if (ViewBag.showmessage == 1)
