--- a/LimenawebApp/Views/Shared/Scripts_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_landingpage.cshtml
@@ -7,3 +7,9 @@
 @*<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-3Itc_12jehW5DsgnUvR3VButshXmnG8&callback=myMap"></script>*@
 
 <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+<!--Custom range date-->
+<script type="text/javascript" src="~/Content/appcontent/assets/vendor/calendarrangepicker/js/moment.min.js"></script>
+<script type="text/javascript" src="~/Content/appcontent/assets/vendor/calendarrangepicker/js/daterangepicker.min.js"></script>
+
+<!--select2-->
+<script src="~/Content/appcontent/assets/vendor/select2/js/select2.full.js"></script>
