--- a/LimenawebApp/Views/Invoices/Routes_Report.cshtml
+++ b/LimenawebApp/Views/Invoices/Routes_Report.cshtml
@@ -32,7 +32,7 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div id="iframePowerBI" style="height:750px; position:relative">
-                                            <iframe style="border:none; width:100%; height:700px; z-index:1" src="https://app.powerbi.com/reportEmbed?reportId=26d10b86-9c2f-4a3c-9dc8-21bcc68e16a4&autoAuth=true&ctid=614e23fc-4bfd-4a0e-98ad-993387da46ad&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQifQ%3D%3D%22" 
+                                            <iframe style="border:none; width:100%; height:700px; z-index:1" src="https://app.powerbi.com/view?r=eyJrIjoiMGMwYmE1ZjQtMWIxZS00YzBkLTk5MDAtNWZmMmY4NWZmNGQ3IiwidCI6IjYxNGUyM2ZjLTRiZmQtNGEwZS05OGFkLTk5MzM4N2RhNDZhZCIsImMiOjN9%22" 
                                                     frameborder="0" allowfullscreen="false"></iframe>
                                             <!--<img style="top:0px; right:0px; position:absolute;width:100%; height:670px; z-index:9; opacity:0" src="~/Content/images/MechandiserWeb.jpg">-->
                                             @*<img style="top:663px; left:0px; position:absolute; z-index:9" src="~/Content/images/iframefooter.png" width="200" height="37">
