--- a/LimenawebApp/Views/Management/New_customers.cshtml
+++ b/LimenawebApp/Views/Management/New_customers.cshtml
@@ -63,7 +63,7 @@
 
                                                     }
                                                     else {
-                                                    <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="imgTAXID_@user.ID_customer" src="@Url.Content(user.url_imageTAXCERT)" />
+                                                    <img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="imgTAXID_@user.ID_customer" src="@Url.Content(user.url_imageTAXCERT)" alt="" />
                                                     }
                                                     
                                                 </td>
@@ -75,14 +75,17 @@
 
                                                     }
                                                     else {
-<img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="imgTAXCERT_@user.ID_customer" src="@Url.Content(user.url_imageTAXCERNUM)" />
+<img class="myImg" style="width:40px;height:40px;" onclick="showFullImage(this.id)" id="imgTAXCERT_@user.ID_customer" src="@Url.Content(user.url_imageTAXCERNUM)" alt=""  />
                                                     }
                                                 </td>
                                                 <td>
                                                     @if (user.OnSharepoint == false)
                                                     {
-                                                        <a href="@Url.Action("SendToSharepoint", "Management", new { id=user.ID_customer})" class="btn btn-dark btn-sm form-pill text-light" title="Approve" onClick="this.disabled=true;"><i class="fa fa-upload"></i></a>
-                                                        <a href="#" class="btn btn-dark btn-sm form-pill text-light" title="Delete"><i class="fa fa-trash-o"></i></a>
+                                                        <a href="javascript:void(0)" onclick="approveRequest(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Approve" onClick="this.disabled=true;"><i class="fa fa-upload"></i></a>
+                                                        <a href="javascript:void(0)" onclick="deleteRequest(@user.ID_customer)" class="btn btn-dark btn-sm form-pill text-light" title="Delete"><i class="fa fa-trash-o"></i></a>
+                                                    }
+                                                    else {
+                                                        <label class="badge badge-success">On Sharepoint</label>
                                                     }
 
 
@@ -109,3 +112,4 @@
     <div id="caption"></div>
     <span class="close">&times;</span>
 </div>
+
