--- a/LimenawebApp/Views/Shared/Style_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Style_landingpage.cshtml
@@ -11,10 +11,14 @@
 <link href="~/Content/landingpage/css/normalize.css" rel="stylesheet" type="text/css">
 <link href="~/Content/landingpage/css/webflow.css" rel="stylesheet" type="text/css">
 <link href="~/Content/landingpage/css/dlimena.webflow.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="~/Content/appcontent/assets/vendor/calendarrangepicker/css/daterangepicker.css" />
+<link rel="stylesheet" href="~/Content/login/css/stylespinner.css">
+<!--select2-->
+<link href="~/Content/appcontent/assets/vendor/select2/css/select2.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-<script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"]  }});</script>
+<script type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"] } });</script>
 <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+<script type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
 <link href="~/Content/landingpage/images/ico.png" rel="shortcut icon" type="image/x-icon">
 <link href="~/Content/landingpage/images/WebIco256.png" rel="apple-touch-icon">
 
@@ -22,8 +26,8 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116898086-3"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
     gtag('config', 'UA-116898086-3');
 
